Bug 73421 - Windows behind the toolbar can't be moved
Summary: Windows behind the toolbar can't be moved
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.3.0
Hardware: ARM Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-09 02:31 UTC by Yong Gan
Modified: 2014-04-29 23:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
The capture for the window move bug (708.92 KB, image/png)
2014-01-09 02:31 UTC, Yong Gan
Details
More capture for the title bar bug (351.22 KB, image/png)
2014-01-10 02:23 UTC, Yong Gan
Details

Description Yong Gan 2014-01-09 02:31:17 UTC
Created attachment 91729 [details]
The capture for the window move bug

Overview: 
Windows behind the toolbar can't be moved .

Steps to Reproduce: 

1) run weston-subsurfaces

2) Drag the drop the window behind the toolbar.

3) Can't move the window again.
Comment 1 U. Artie Eoff 2014-01-09 13:19:41 UTC
You can move it with <mod> + left mouse button
Comment 2 Yong Gan 2014-01-10 02:21:49 UTC
Thanks for your advice, but i think the right solution is that make sure the window not to be behind the toolbar.

I can move the entire window behind the toolbar by your advice, but also can't move it again, you can refer to my attachment bug_toolbar2.png.
Comment 3 Yong Gan 2014-01-10 02:23:29 UTC
Created attachment 91803 [details]
More capture for the title bar bug
Comment 4 Kristian Høgsberg 2014-04-29 23:06:13 UTC
commit ae356aef58866f32fbb5d127fce77ce31808fe86
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue Apr 29 16:03:54 2014 -0700

    desktop-shell: Keep windows on screen when moving
    
    We add a primitive constraining function to at least prevent users from
    moving the window up under the panel.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=73421


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.